# spacefm

./: .gitattributes  .gitignore  README.md  meson.build  meson_options.txt
data/html/: build-manual.sh
data/ui/: about-dlg3.ui  appchooserdlg3.ui  file_delete.ui  file_properties2.ui  file_properties3.ui  file_rename.ui  find-files3.ui  godlg.ui  prefdlg3.ui
doc/: spacefm-dialog.7  spacefm-scripts.7
etc/: spacefm.conf
extra/: README.md
extra/plugins/: README.md  compress.sh
src/: cust-dialog.c  cust-dialog.h  extern.h  find-files.c  go-dialog.c  go-dialog.h  gtk2-compat.h  item-prop.c  item-prop.h  main-window.c  main-window.h  main.c  pref-dialog.c  pref-dialog.h  private.h  settings.c  settings.h  spacefm-auth  utils.c  utils.h
src/exo/: README  exo-binding.c  exo-binding.h  exo-cell-renderer-ellipsized-text.c  exo-cell-renderer-ellipsized-text.h  exo-cell-renderer-icon.c  exo-cell-renderer-icon.h  exo-common.h  exo-gdk-pixbuf-extensions.c  exo-gdk-pixbuf-extensions.h  exo-gtk-extensions.c  exo-gtk-extensions.h  exo-icon-chooser-dialog.c  exo-icon-chooser-dialog.h  exo-icon-chooser-model.c  exo-icon-chooser-model.h  exo-icon-view.c  exo-icon-view.h  exo-marshal.c  exo-marshal.h  exo-private.c  exo-private.h  exo-string.c  exo-string.h  exo-thumbnail-preview.c  exo-thumbnail-preview.h  exo-tree-view.c  exo-tree-view.h  exo-utils.c  exo-utils.h
src/mime-type/: mime-action.c  mime-action.h  mime-cache.c  mime-cache.h  mime-type.c  mime-type.h
src/ptk/: ptk-app-chooser.c  ptk-app-chooser.h  ptk-clipboard.c  ptk-clipboard.h  ptk-dir-tree-view.c  ptk-utils.c  (+30 more)
(+36 files in other folders)
