#preprocessor
option(
  'nls',
  type : 'boolean',
  value : false,
  description : 'enable native language support',
)
option(
  'sn',
  type : 'boolean',
  value : false,
  description : 'enable desktop startup notifications',
)
option(
  'deprecated-hw',
  type : 'boolean',
  value : false,
  description : 'enable support for firewire, audiocd, dvd, cdrom, floppy <TODO>',
)
option(
  'mmap',
  type : 'boolean',
  value : true,
  description : 'build with mmap support',
)
option(
  'xxhash',
  type : 'boolean',
  value : true,
  description : 'ignore freedesktop standards and use xxhash for thumbnail hasher',
)

#other
#TODO bashpath, etc
option('htmldir',
  type : 'string',
  value : '',
  description : 'default is, /usr/share',
)
option('package-ui-dir',
  type : 'string',
  value : '',
  description : 'default is, /usr/share/spacefm/ui',
)

